Add brands screen

--- a/index.html
+++ b/index.html
@@ -224,6 +224,31 @@
         id="my-ads-screen"
         class="section main-content-section animate__animated animate__fadeIn"
       >
+        <div class="container mb-3">
+          <div class="field is-horizontal">
+            <div class="field-body">
+              <div class="field">
+                <p class="control is-expanded">
+                  <input class="input" type="text" placeholder="Search ad..." />
+                </p>
+              </div>
+              <div class="field">
+                <div class="control is-expanded">
+                  <div class="select is-fullwidth">
+                    <select>
+                      <option>Or select by brand</option>
+                      <option>Jim Beam</option>
+                      <option>Louis Jadot</option>
+                      <option>Beringer</option>
+                      <option>Smirnoff</option>
+                      <option>Mikkeller</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="container">
           <div class="tile is-ancestor">
             <div class="tile is-12 is-vertical is-parent">
@@ -526,13 +551,107 @@
         id="my-brands-screen"
         class="section main-content-section animate__animated animate__fadeIn"
       >
-        The brands might be here
+        <div class="container">
+          <div class="tile is-ancestor">
+            <div
+              class="tile is-parent modal-button"
+              data-target="add-brand-modal"
+            >
+              <div class="tile is-child box">
+                <figure class="image brand-image">
+                  <img src="images/Jim-Beam.jpg" alt="" />
+                </figure>
+              </div>
+            </div>
+            <div
+              class="tile is-parent modal-button"
+              data-target="add-brand-modal"
+            >
+              <div class="tile is-child box">
+                <figure class="image brand-image">
+                  <img src="images/Louis-Jadot-winery-min.jpg" alt="" />
+                </figure>
+              </div>
+            </div>
+            <div
+              class="tile is-parent modal-button"
+              data-target="add-brand-modal"
+            >
+              <div class="tile is-child box">
+                <figure class="image brand-image">
+                  <img src="images/Beringer-wine-min.jpg" alt="" />
+                </figure>
+              </div>
+            </div>
+            <div
+              class="tile is-parent modal-button"
+              data-target="add-brand-modal"
+            >
+              <div class="tile is-child box">
+                <figure class="image brand-image">
+                  <img src="images/Smirnoff.jpg" alt="" />
+                </figure>
+              </div>
+            </div>
+            <div
+              class="tile is-parent modal-button"
+              data-target="add-brand-modal"
+            >
+              <div class="tile is-child box">
+                <figure class="image brand-image">
+                  <img src="images/Mikkeller-brewing-comp-min.jpg" alt="" />
+                </figure>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- My Products Screen -->
       <div
         id="my-products-screen"
         class="section main-content-section animate__animated animate__fadeIn"
       >
+        <div class="container mb-3">
+          <div class="field is-horizontal">
+            <div class="field-body">
+              <div class="field">
+                <p class="control is-expanded">
+                  <input
+                    class="input"
+                    type="text"
+                    placeholder="Search product..."
+                  />
+                </p>
+              </div>
+              <div class="field">
+                <div class="control is-expanded">
+                  <div class="select is-fullwidth">
+                    <select>
+                      <option>Or select by brand</option>
+                      <option>Jim Beam</option>
+                      <option>Louis Jadot</option>
+                      <option>Beringer</option>
+                      <option>Smirnoff</option>
+                      <option>Mikkeller</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <div class="field">
+                <div class="control is-expanded">
+                  <div class="select is-fullwidth">
+                    <select>
+                      <option>Or select by type</option>
+                      <option>Wine</option>
+                      <option>Beer</option>
+                      <option>Liquor</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="container">
           <div class="tile is-ancestor">
             <div class="tile is-6 is-parent">
@@ -967,7 +1086,7 @@
             <a class="level-item"> About us </a>
             <a class="level-item"> Documentation </a>
             <a class="level-item"> FAQ </a>
-            <a class="level-item"> Suppoort </a>
+            <a class="level-item"> Support </a>
           </nav>
         </footer>
       </div>
