Add label buttons

--- a/index.html
+++ b/index.html
@@ -1584,8 +1584,8 @@
             <div class="columns is-mulitine">
               <div class="column is-8-desktop is-offset-2-desktop is-12-mobile">
                 <div class="tile is-ancestor">
-                  <div class="tile is-parent is-4 button-image">
-                    <div class="tile is-child has-text-centered">
+                  <div class="tile is-parent is-4">
+                    <div class="tile is-child has-text-centered button-image">
                       <span class="icon tile-icon">
                         <i class="fa-solid fa-user fa-3x"></i>
                       </span>
@@ -1593,8 +1593,8 @@
                       <p class="subtitle">First start</p>
                     </div>
                   </div>
-                  <div class="tile is-parent is-4 button-image">
-                    <div class="tile is-child has-text-centered">
+                  <div class="tile is-parent is-4">
+                    <div class="tile is-child has-text-centered button-image">
                       <span class="icon tile-icon">
                         <i class="fa-solid fa-user-graduate fa-3x"></i>
                       </span>
@@ -1602,8 +1602,8 @@
                       <p class="subtitle">Advanced</p>
                     </div>
                   </div>
-                  <div class="tile is-parent is-4 button-image">
-                    <div class="tile is-child has-text-centered">
+                  <div class="tile is-parent is-4">
+                    <div class="tile is-child has-text-centered button-image">
                       <span class="icon tile-icon">
                         <i class="fa-solid fa-user-tie fa-3x"></i>
                       </span>
@@ -1701,6 +1701,17 @@
                 <p>
                   <strong>Santa Margherita Pinot Grigio DOC</strong>
                 </p>
+              </div>
+              <div class="column is-12 has-text-centered">
+                <p class="subtitle">And choose label sticker (optional):</p>
+                <div class="buttons is-justify-content-center">
+                  <button class="button is-small is-rounded">New</button>
+                  <button class="button is-small is-rounded">
+                    Best Seller
+                  </button>
+                  <button class="button is-small is-rounded">Featured</button>
+                  <button class="button is-small is-rounded">Sale</button>
+                </div>
               </div>
             </div>
           </div>
