--- a/index.html
+++ b/index.html
@@ -1010,7 +1010,34 @@
         The stats might be here
       </div>
     </main>
-
+    <!-- Side navbar -->
+    <nav class="side-navbar">
+      <a class="side-link is-active">
+        <span class="icon-text"
+          ><span class="icon"><i class="fa-solid fa-house"></i></span>
+        </span>
+      </a>
+      <a class="side-link"
+        ><span class="icon-text"
+          ><span class="icon"><i class="fa-regular fa-note-sticky"></i></span>
+        </span>
+      </a>
+      <a class="side-link"
+        ><span class="icon-text"
+          ><span class="icon"><i class="fa-regular fa-copyright"></i></span>
+        </span>
+      </a>
+      <a class="side-link"
+        ><span class="icon-text"
+          ><span class="icon"><i class="fa-solid fa-wine-bottle"></i></span>
+        </span>
+      </a>
+      <a class="side-link"
+        ><span class="icon-text"
+          ><span class="icon"><i class="fa-solid fa-chart-line"></i></span>
+        </span>
+      </a>
+    </nav>
     <!-- Bottom navbar -->
     <footer>
       <nav class="bottom-navbar level is-mobile">
