--- a/index.html
+++ b/index.html
@@ -1040,7 +1040,7 @@
     </nav>
     <!-- Bottom navbar -->
     <footer>
-      <nav class="bottom-navbar level is-mobile">
+      <nav class="bottom-navbar level">
         <a class="level-item bottom-link is-active">
           <span class="icon-text"
             ><span class="icon"><i class="fa-solid fa-house"></i></span>
@@ -1731,7 +1731,7 @@
               </div>
               <div class="column is-12 has-text-centered">
                 <p class="subtitle">And choose label sticker (optional):</p>
-                <div class="buttons is-justify-content-center">
+                <div class="buttons sticker-buttons is-justify-content-center">
                   <button class="button is-small is-rounded">New</button>
                   <button class="button is-small is-rounded">
                     Best Seller
@@ -1767,35 +1767,6 @@
             </button>
           </div>
         </section>
-        <footer class="modal-card-foot is-justify-content-center">
-          <progress
-            id="progress-bar_ad"
-            class="progress is-info"
-            value="0"
-            max="100"
-          ></progress>
-          <!--
-          <div class="prev-next-buttons buttons">
-            <button class="modal-button button prev-button">
-              <span class="icon">
-                <i class="fa-solid fa-chevron-left"></i> </span
-              ><span>Prev</span>
-            </button>
-            <button class="modal-button button next-button">
-              <span>Next</span
-              ><span class="icon">
-                <i class="fa-solid fa-chevron-right"></i>
-              </span></button
-            ><button
-              class="modal-button button finish-button is-success modal-button-close"
-            >
-              <span>Finish</span
-              ><span class="icon">
-                <i class="fa-solid fa-check"></i>
-              </span>
-            </button>
-          </div>
-        --></footer>
       </div>
     </div>
     <!-- Scripts -->
